--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -28,7 +28,7 @@
   "score": "得分",
   "best": "最佳",
   "again": "重来",
-  "home": "主页",
+  "home": "B站链接(给个三联吧！球球啦)",
   "rank": "排行",
   "repo": "仓库",
   "text-level-1": "试着好好练一下?",
