--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -28,9 +28,9 @@
   "score": "得分",
   "best": "最佳",
   "again": "重来",
-  "home": "B站链接(给个三联吧！球球啦)",
+  "home": "主页",
   "rank": "排行",
-  "repo": "仓库",
+  "repo": "B站链接(给个三联吧！球球啦)",
   "text-level-1": "试着好好练一下?",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
