--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -30,7 +30,7 @@
   "again": "重来",
   "home": "主页",
   "rank": "排行",
-  "repo": "B站链接(给个三联吧！球球啦)",
+  "repo": "B站链接(亲,给个三连8！球球啦)",
   "text-level-1": "有两年半的练习时长了吗?",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
